--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           <li><a href="#">Studio</a></li>
         </ul>
       </nav>
+      <div class="skip-link" >
+        <a class="skip-link" href='#main'>Skip to content</a>
+      </div>
       <img src="https://placekitten.com/1200/900" class="banner">
     </header>
     <main class="main-content" role="main">
@@ -59,6 +62,9 @@
         </form>
       </section>
     </main>
+    <div class="skip-link" >
+      <a class="skip-link" href='#home'>Skip to top of page</a>
+    </div>
     <footer class="site-footer" role="contentinfo">
       &copy; 2021 Jam Box Studios
     </footer>
