added css for skip link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <div class="skip-link" >
-        <a class="skip-link" href='#main'>Skip to content</a>
+        <a class="skip-link" href='#main' class="visible-hidden ">Skip to content</a>
       </div>
       <img src="https://placekitten.com/1200/900" class="banner">
     </header>
